validator_derive_tests/tests/compile-fail/length/unknown_arg.stderr
error: Unknown field: `eq`
 --> tests/compile-fail/length/unknown_arg.rs:5:23
  |
5 |     #[validate(length(eq = 2))]
  |                       ^^^^^^
  |
  = help: did you mean `equal`?
